--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="grid-footer" *ngIf="!showSeeyondOptions">
       <span class="tile-usage" appStyledButton='secondary-left'>
-        <button (click)="tileUsage()">View tile usage</button>
+        <button [disabled]="feature.feature_type === 'seeyond' || (!feature.canQuote || !feature.estimated_amount)" (click)="tileUsage()">View tile usage</button>
       </span>
       <span class="quantities-sold" *ngIf="!!quantitiesString">
         <span class="sub-header">{{quantitiesString}}</span>
@@ -60,7 +60,7 @@
     </div>
     <div class="bottom-section">
       <div class="totals">
-        <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond'" >
+        <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond' && feature.showPricing" >
           <div class="total-row">
             <span class="sub-header">List:</span>
             <span  class="total">{{feature.list_price | currency:'USD'}}</span>
@@ -79,7 +79,7 @@
             <span class="total">{{feature.estimated_amount | currency:'USD'}}</span>
           </div>
         </span>
-        <span class="est-totals" *ngIf="feature.feature_type === 'seeyond'" >
+        <span class="est-totals" *ngIf="feature.feature_type === 'seeyond' && feature.showPricing" >
           <div class="total-row">
             <span class="sub-header">List:</span>
             <span  class="total">{{seeyond.list_price | currency:'USD'}}</span>
