--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -79,7 +79,7 @@
             <span class="total">{{feature.estimated_amount | currency:'USD'}}</span>
           </div>
         </span>
-        <span class="est-totals" *ngIf="feature.feature_type === 'seeyond' && feature.showPricing" >
+        <span class="est-totals" *ngIf="feature.feature_type === 'seeyond' && seeyond.showPricing" >
           <div class="total-row">
             <span class="sub-header">List:</span>
             <span  class="total">{{seeyond.list_price | currency:'USD'}}</span>
