--- a/src/app/details/seeyond-details/seeyond-details.component.html
+++ b/src/app/details/seeyond-details/seeyond-details.component.html
@@ -41,7 +41,7 @@
           </div>
           <div class="bottom-row">
               <div class="details-header">Est. Total</div>
-              <div id="estimated-totals" class="info-section">
+              <div id="estimated-totals" class="info-section" *ngIf="seeyond.showPricing">
                 <div class="info-line">
                   <span>List:</span>
                   <span  class="total">{{seeyond.list_price | currency:'USD'}}</span>
