--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -125,7 +125,7 @@
                 <mat-cell *matCellDef="let element" class="material-column hush-material-row">
                   <img src="{{element.image}}" class="img-responsive table-img rotate-90"
                     alt="{{element.material.name_str | capitalize}}">
-                  {{element.material | capitalize}} - {{element.material_type}}
+                  {{element.material | capitalize}} - {{element.material_size}}
                 </mat-cell>
               </ng-container>
 
@@ -163,7 +163,7 @@
           <span appStyledButton='primary-right' *ngIf="feature.quoted">
             <button (click)="viewDetails()">View Details</button>
           </span>
-          <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond'" >
+          <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond' && feature.showPricing" >
               <div class="total-row">
                 <span class="sub-header">List:</span>
                 <span  class="total">{{feature.list_price | currency:'USD'}}</span>
